remove name tag from build job
